recursion.lessons.recursion.koch.Koch.scala.error
Koch:25: error: ';' expected but ')' found.
	else{snowside(levels=levels-1,length))}
                                             ^